sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                                                 | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| ------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [backupEnginesGetSample.ts][backupenginesgetsample]                                                           | Returns backup management server registered to Recovery Services Vault. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Dpm/BackupEngines_Get.json                                                                                                                                                                                                                                                                                                                                                             |
| [backupEnginesListSample.ts][backupengineslistsample]                                                         | Backup management servers registered to Recovery Services Vault. Returns a pageable list of servers. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Dpm/BackupEngines_List.json                                                                                                                                                                                                                                                                                                                               |
| [backupJobsListSample.ts][backupjobslistsample]                                                               | Provides a pageable list of jobs. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Common/ListJobs.json                                                                                                                                                                                                                                                                                                                                                                                                         |
| [backupOperationResultsGetSample.ts][backupoperationresultsgetsample]                                         | Provides the status of the delete operations such as deleting backed up item. Once the operation has started, the status code in the response would be Accepted. It will continue to be in this state till it reaches completion. On successful completion, the status code will be OK. This method expects OperationID as an argument. OperationID is part of the Location header of the operation response. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Common/ProtectedItem_Delete_OperationResult.json |
| [backupOperationStatusesGetSample.ts][backupoperationstatusesgetsample]                                       | Fetches the status of an operation such as triggering a backup, restore. The status can be in progress, completed or failed. You can refer to the OperationStatus enum for all the possible states of an operation. Some operations create jobs. This method returns the list of jobs when the operation is complete. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Common/ProtectedItem_Delete_OperationStatus.json                                                                                         |
| [backupPoliciesListSample.ts][backuppolicieslistsample]                                                       | Lists of backup policies associated with Recovery Services Vault. API provides pagination parameters to fetch scoped results. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/BackupPolicies_List.json                                                                                                                                                                                                                                                                                             |
| [backupProtectableItemsListSample.ts][backupprotectableitemslistsample]                                       | Provides a pageable list of protectable objects within your subscription according to the query filter and the pagination parameters. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/BackupProtectableItems_List.json                                                                                                                                                                                                                                                                             |
| [backupProtectedItemsListSample.ts][backupprotecteditemslistsample]                                           | Provides a pageable list of all items that are backed up within a vault. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/BackupProtectedItems_List.json                                                                                                                                                                                                                                                                                                                                            |
| [backupProtectionContainersListSample.ts][backupprotectioncontainerslistsample]                               | Lists the containers registered to Recovery Services Vault. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureStorage/ProtectionContainers_List.json                                                                                                                                                                                                                                                                                                                                                        |
| [backupProtectionIntentListSample.ts][backupprotectionintentlistsample]                                       | Provides a pageable list of all intents that are present within a vault. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureWorkload/BackupProtectionIntent_List.json                                                                                                                                                                                                                                                                                                                                        |
| [backupResourceEncryptionConfigsGetSample.ts][backupresourceencryptionconfigsgetsample]                       | Fetches Vault Encryption config. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/BackupResourceEncryptionConfig_Get.json                                                                                                                                                                                                                                                                                                                                                                                       |
| [backupResourceEncryptionConfigsUpdateSample.ts][backupresourceencryptionconfigsupdatesample]                 | Updates Vault encryption config. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/BackupResourceEncryptionConfig_Put.json                                                                                                                                                                                                                                                                                                                                                                                       |
| [backupResourceStorageConfigsNonCrrGetSample.ts][backupresourcestorageconfigsnoncrrgetsample]                 | Fetches resource storage config. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Common/BackupStorageConfig_Get.json                                                                                                                                                                                                                                                                                                                                                                                           |
| [backupResourceStorageConfigsNonCrrPatchSample.ts][backupresourcestorageconfigsnoncrrpatchsample]             | Updates vault storage model type. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Common/BackupStorageConfig_Patch.json                                                                                                                                                                                                                                                                                                                                                                                        |
| [backupResourceStorageConfigsNonCrrUpdateSample.ts][backupresourcestorageconfigsnoncrrupdatesample]           | Updates vault storage model type. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Common/BackupStorageConfig_Put.json                                                                                                                                                                                                                                                                                                                                                                                          |
| [backupResourceVaultConfigsGetSample.ts][backupresourcevaultconfigsgetsample]                                 | Fetches resource vault config. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Common/BackupResourceVaultConfigs_Get.json                                                                                                                                                                                                                                                                                                                                                                                      |
| [backupResourceVaultConfigsPutSample.ts][backupresourcevaultconfigsputsample]                                 | Updates vault security config. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Common/BackupResourceVaultConfigs_Put.json                                                                                                                                                                                                                                                                                                                                                                                      |
| [backupResourceVaultConfigsUpdateSample.ts][backupresourcevaultconfigsupdatesample]                           | Updates vault security config. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Common/BackupResourceVaultConfigs_Patch.json                                                                                                                                                                                                                                                                                                                                                                                    |
| [backupStatusGetSample.ts][backupstatusgetsample]                                                             | Get the container backup status x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/GetBackupStatus.json                                                                                                                                                                                                                                                                                                                                                                                               |
| [backupUsageSummariesListSample.ts][backupusagesummarieslistsample]                                           | Fetches the backup management usage summaries of the vault. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Common/BackupProtectionContainers_UsageSummary_Get.json                                                                                                                                                                                                                                                                                                                                            |
| [backupWorkloadItemsListSample.ts][backupworkloaditemslistsample]                                             | Provides a pageable list of workload item of a specific container according to the query filter and the pagination parameters. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureWorkload/BackupWorkloadItems_List.json                                                                                                                                                                                                                                                                                     |
| [backupsTriggerSample.ts][backupstriggersample]                                                               | Triggers backup for specified backed up item. This is an asynchronous operation. To know the status of the operation, call GetProtectedItemOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Common/TriggerBackup_Post.json                                                                                                                                                                                                                                                                 |
| [bmsPrepareDataMoveOperationResultGetSample.ts][bmspreparedatamoveoperationresultgetsample]                   | Fetches Operation Result for Prepare Data Move x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/BackupDataMove/PrepareDataMoveOperationResult_Get.json                                                                                                                                                                                                                                                                                                                                                          |
| [bmsPrepareDataMoveSample.ts][bmspreparedatamovesample]                                                       | Prepares source vault for Data Move operation x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/BackupDataMove/PrepareDataMove_Post.json                                                                                                                                                                                                                                                                                                                                                                         |
| [bmsTriggerDataMoveSample.ts][bmstriggerdatamovesample]                                                       | Triggers Data Move Operation on target vault x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/BackupDataMove/TriggerDataMove_Post.json                                                                                                                                                                                                                                                                                                                                                                          |
| [deletedProtectionContainersListSample.ts][deletedprotectioncontainerslistsample]                             | Lists the soft deleted containers registered to Recovery Services Vault. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureStorage/SoftDeletedContainers_List.json                                                                                                                                                                                                                                                                                                                                          |
| [exportJobsOperationResultsGetSample.ts][exportjobsoperationresultsgetsample]                                 | Gets the operation result of operation triggered by Export Jobs API. If the operation is successful, then it also contains URL of a Blob and a SAS key to access the same. The blob contains exported jobs in JSON serialized format. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Common/ExportJobsOperationResult.json                                                                                                                                                                                    |
| [featureSupportValidateSample.ts][featuresupportvalidatesample]                                               | It will validate if given feature with resource properties is supported in service x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/BackupFeature_Validate.json                                                                                                                                                                                                                                                                                                                                     |
| [getOperationStatusSample.ts][getoperationstatussample]                                                       | Fetches operation status for data move operation on vault x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/BackupDataMove/BackupDataMoveOperationStatus_Get.json                                                                                                                                                                                                                                                                                                                                                |
| [itemLevelRecoveryConnectionsProvisionSample.ts][itemlevelrecoveryconnectionsprovisionsample]                 | Provisions a script which invokes an iSCSI connection to the backup data. Executing this script opens a file explorer displaying all the recoverable files and folders. This is an asynchronous operation. To know the status of provisioning, call GetProtectedItemOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/Provision_Ilr.json                                                                                                                                        |
| [itemLevelRecoveryConnectionsRevokeSample.ts][itemlevelrecoveryconnectionsrevokesample]                       | Revokes an iSCSI connection which can be used to download a script. Executing this script opens a file explorer displaying all recoverable files and folders. This is an asynchronous operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/Revoke_Ilr.json                                                                                                                                                                                                                                   |
| [jobCancellationsTriggerSample.ts][jobcancellationstriggersample]                                             | Cancels a job. This is an asynchronous operation. To know the status of the cancellation, call GetCancelOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Common/TriggerCancelJob.json                                                                                                                                                                                                                                                                                                      |
| [jobDetailsGetSample.ts][jobdetailsgetsample]                                                                 | Gets extended information associated with the job. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Common/GetJobDetails.json                                                                                                                                                                                                                                                                                                                                                                                   |
| [jobOperationResultsGetSample.ts][joboperationresultsgetsample]                                               | Fetches the result of any operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Common/CancelJobOperationResult.json                                                                                                                                                                                                                                                                                                                                                                                      |
| [jobsExportSample.ts][jobsexportsample]                                                                       | Triggers export of jobs specified by filters and returns an OperationID to track. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Common/TriggerExportJobs.json                                                                                                                                                                                                                                                                                                                                                |
| [moveRecoveryPointSample.ts][moverecoverypointsample]                                                         | Move recovery point from one datastore to another store. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/TriggerRecoveryPointMove_Post.json                                                                                                                                                                                                                                                                                                                                                                    |
| [operationValidateSample.ts][operationvalidatesample]                                                         | Validate operation for specified backed up item. This is a synchronous operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/ValidateOperation_RestoreDisk.json                                                                                                                                                                                                                                                                                                                               |
| [operationsListSample.ts][operationslistsample]                                                               | Returns the list of available operations. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/ListOperations.json                                                                                                                                                                                                                                                                                                                                                                                                  |
| [privateEndpointConnectionDeleteSample.ts][privateendpointconnectiondeletesample]                             | Delete Private Endpoint requests. This call is made by Backup Admin. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/PrivateEndpointConnection/DeletePrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                            |
| [privateEndpointConnectionGetSample.ts][privateendpointconnectiongetsample]                                   | Get Private Endpoint Connection. This call is made by Backup Admin. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/PrivateEndpointConnection/GetPrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                                |
| [privateEndpointConnectionPutSample.ts][privateendpointconnectionputsample]                                   | Approve or Reject Private Endpoint requests. This call is made by Backup Admin. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/PrivateEndpointConnection/PutPrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                    |
| [privateEndpointGetOperationStatusSample.ts][privateendpointgetoperationstatussample]                         | Gets the operation status for a private endpoint connection. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/PrivateEndpointConnection/GetPrivateEndpointConnectionOperationStatus.json                                                                                                                                                                                                                                                                                                                        |
| [protectableContainersListSample.ts][protectablecontainerslistsample]                                         | Lists the containers that can be registered to Recovery Services Vault. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureStorage/ProtectableContainers_List.json                                                                                                                                                                                                                                                                                                                                           |
| [protectedItemOperationResultsGetSample.ts][protecteditemoperationresultsgetsample]                           | Fetches the result of any operation on the backup item. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/ProtectedItemOperationResults.json                                                                                                                                                                                                                                                                                                                                                         |
| [protectedItemOperationStatusesGetSample.ts][protecteditemoperationstatusesgetsample]                         | Fetches the status of an operation such as triggering a backup, restore. The status can be in progress, completed or failed. You can refer to the OperationStatus enum for all the possible states of the operation. Some operations create jobs. This method returns the list of jobs associated with the operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/ProtectedItemOperationStatus.json                                                                                            |
| [protectedItemsCreateOrUpdateSample.ts][protecteditemscreateorupdatesample]                                   | Enables backup of an item or to modifies the backup policy information of an already backed up item. This is an asynchronous operation. To know the status of the operation, call the GetItemOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/ConfigureProtection.json                                                                                                                                                                                                         |
| [protectedItemsDeleteSample.ts][protecteditemsdeletesample]                                                   | Used to disable backup of an item within a container. This is an asynchronous operation. To know the status of the request, call the GetItemOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Common/ProtectedItem_Delete.json                                                                                                                                                                                                                                                              |
| [protectedItemsGetSample.ts][protecteditemsgetsample]                                                         | Provides the details of the backed up item. This is an asynchronous operation. To know the status of the operation, call the GetItemOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/ClassicCompute_ProtectedItem_Get.json                                                                                                                                                                                                                                                     |
| [protectionContainerOperationResultsGetSample.ts][protectioncontaineroperationresultsgetsample]               | Fetches the result of any operation on the container. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureStorage/ProtectionContainers_Inquire_Result.json                                                                                                                                                                                                                                                                                                                                                    |
| [protectionContainerRefreshOperationResultsGetSample.ts][protectioncontainerrefreshoperationresultsgetsample] | Provides the result of the refresh operation triggered by the BeginRefresh operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Common/RefreshContainers_OperationResults.json                                                                                                                                                                                                                                                                                                                           |
| [protectionContainersGetSample.ts][protectioncontainersgetsample]                                             | Gets details of the specific container registered to your Recovery Services Vault. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureWorkload/ProtectionContainers_Get.json                                                                                                                                                                                                                                                                                                                                 |
| [protectionContainersInquireSample.ts][protectioncontainersinquiresample]                                     | This is an async operation and the results should be tracked using location header or Azure-async-url. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureStorage/ProtectionContainers_Inquire.json                                                                                                                                                                                                                                                                                                          |
| [protectionContainersRefreshSample.ts][protectioncontainersrefreshsample]                                     | Discovers all the containers in the subscription that can be backed up to Recovery Services Vault. This is an asynchronous operation. To know the status of the operation, call GetRefreshOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Common/RefreshContainers.json                                                                                                                                                                                                                   |
| [protectionContainersRegisterSample.ts][protectioncontainersregistersample]                                   | Registers the container with Recovery Services vault. This is an asynchronous operation. To track the operation status, use location header to call get latest status of the operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureStorage/ProtectionContainers_Register.json                                                                                                                                                                                                                        |
| [protectionContainersUnregisterSample.ts][protectioncontainersunregistersample]                               | Unregisters the given container from your Recovery Services Vault. This is an asynchronous operation. To determine whether the backend service has finished processing the request, call Get Container Operation Result API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureWorkload/ProtectionContainers_Unregister.json                                                                                                                                                                                |
| [protectionIntentCreateOrUpdateSample.ts][protectionintentcreateorupdatesample]                               | Create Intent for Enabling backup of an item. This is a synchronous operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/ProtectionIntent_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                |
| [protectionIntentDeleteSample.ts][protectionintentdeletesample]                                               | Used to remove intent from an item x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureWorkload/BackupProtectionIntent_Delete.json                                                                                                                                                                                                                                                                                                                                                                            |
| [protectionIntentGetSample.ts][protectionintentgetsample]                                                     | Provides the details of the protection intent up item. This is an asynchronous operation. To know the status of the operation, call the GetItemOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureWorkload/BackupProtectionIntent_Get.json                                                                                                                                                                                                                                              |
| [protectionIntentValidateSample.ts][protectionintentvalidatesample]                                           | It will validate followings 1. Vault capacity 2. VM is already protected 3. Any VM related configuration passed in properties. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/ProtectionIntent_Validate.json                                                                                                                                                                                                                                                                                      |
| [protectionPoliciesCreateOrUpdateSample.ts][protectionpoliciescreateorupdatesample]                           | Creates or modifies a backup policy. This is an asynchronous operation. Status of the operation can be fetched using GetPolicyOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureStorage/ProtectionPolicies_CreateOrUpdate_Daily.json                                                                                                                                                                                                                                                   |
| [protectionPoliciesDeleteSample.ts][protectionpoliciesdeletesample]                                           | Deletes specified backup policy from your Recovery Services Vault. This is an asynchronous operation. Status of the operation can be fetched using GetProtectionPolicyOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/ProtectionPolicies_Delete.json                                                                                                                                                                                                                          |
| [protectionPoliciesGetSample.ts][protectionpoliciesgetsample]                                                 | Provides the details of the backup policies associated to Recovery Services Vault. This is an asynchronous operation. Status of the operation can be fetched using GetPolicyOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/V2Policy/v2-Get-Policy.json                                                                                                                                                                                                                       |
| [protectionPolicyOperationResultsGetSample.ts][protectionpolicyoperationresultsgetsample]                     | Provides the result of an operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/ProtectionPolicyOperationResults_Get.json                                                                                                                                                                                                                                                                                                                                                                     |
| [protectionPolicyOperationStatusesGetSample.ts][protectionpolicyoperationstatusesgetsample]                   | Provides the status of the asynchronous operations like backup, restore. The status can be in progress, completed or failed. You can refer to the Operation Status enum for all the possible states of an operation. Some operations create jobs. This method returns the list of jobs associated with operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/ProtectionPolicyOperationStatuses_Get.json                                                                                       |
| [recoveryPointsGetSample.ts][recoverypointsgetsample]                                                         | Provides the information of the backed up data identified using RecoveryPointID. This is an asynchronous operation. To know the status of the operation, call the GetProtectedItemOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/RecoveryPoints_Get.json                                                                                                                                                                                                                     |
| [recoveryPointsListSample.ts][recoverypointslistsample]                                                       | Lists the backup copies for the backed up item. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/RecoveryPoints_List.json                                                                                                                                                                                                                                                                                                                                                                           |
| [recoveryPointsRecommendedForMoveListSample.ts][recoverypointsrecommendedformovelistsample]                   | Lists the recovery points recommended for move to another tier x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/RecoveryPointsRecommendedForMove_List.json                                                                                                                                                                                                                                                                                                                                          |
| [resourceGuardProxiesGetSample.ts][resourceguardproxiesgetsample]                                             | List the ResourceGuardProxies under vault x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/ResourceGuardProxyCRUD/ListResourceGuardProxy.json                                                                                                                                                                                                                                                                                                                                                                   |
| [resourceGuardProxyDeleteSample.ts][resourceguardproxydeletesample]                                           | Delete ResourceGuardProxy under vault x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/ResourceGuardProxyCRUD/DeleteResourceGuardProxy.json                                                                                                                                                                                                                                                                                                                                                                     |
| [resourceGuardProxyGetSample.ts][resourceguardproxygetsample]                                                 | Returns ResourceGuardProxy under vault and with the name referenced in request x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/ResourceGuardProxyCRUD/GetResourceGuardProxy.json                                                                                                                                                                                                                                                                                                                               |
| [resourceGuardProxyPutSample.ts][resourceguardproxyputsample]                                                 | Add or Update ResourceGuardProxy under vault Secures vault critical operations x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/ResourceGuardProxyCRUD/PutResourceGuardProxy.json                                                                                                                                                                                                                                                                                                                               |
| [resourceGuardProxyUnlockDeleteSample.ts][resourceguardproxyunlockdeletesample]                               | Secures delete ResourceGuardProxy operations. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/ResourceGuardProxyCRUD/UnlockDeleteResourceGuardProxy.json                                                                                                                                                                                                                                                                                                                                                       |
| [restoresTriggerSample.ts][restorestriggersample]                                                             | Restores the specified backed up data. This is an asynchronous operation. To know the status of this API call, use GetProtectedItemOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/TriggerRestore_RestoreDisks_IaasVMRestoreRequest.json                                                                                                                                                                                                                                      |
| [securityPiNsGetSample.ts][securitypinsgetsample]                                                             | Get the security PIN. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/Common/BackupSecurityPin_Get.json                                                                                                                                                                                                                                                                                                                                                                                                        |
| [validateOperationResultsGetSample.ts][validateoperationresultsgetsample]                                     | Fetches the result of a triggered validate operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/ValidateOperationResults.json                                                                                                                                                                                                                                                                                                                                                                |
| [validateOperationStatusesGetSample.ts][validateoperationstatusesgetsample]                                   | Fetches the status of a triggered validate operation. The status can be in progress, completed or failed. You can refer to the OperationStatus enum for all the possible states of the operation. If operation has completed, this method returns the list of errors obtained while validating the operation. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/ValidateOperationStatus.json                                                                                                         |
| [validateOperationTriggerSample.ts][validateoperationtriggersample]                                           | Validate operation for specified backed up item in the form of an asynchronous operation. Returns tracking headers which can be tracked using GetValidateOperationResult API. x-ms-original-file: specification/recoveryservicesbackup/resource-manager/Microsoft.RecoveryServices/stable/2023-01-01/examples/AzureIaasVm/TriggerValidateOperation_RestoreDisk.json                                                                                                                                                                                                                            |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/backupEnginesGetSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env RECOVERYSERVICESBACKUP_SUBSCRIPTION_ID="<recoveryservicesbackup subscription id>" RECOVERYSERVICESBACKUP_RESOURCE_GROUP="<recoveryservicesbackup resource group>" node dist/backupEnginesGetSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[backupenginesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupEnginesGetSample.ts
[backupengineslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupEnginesListSample.ts
[backupjobslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupJobsListSample.ts
[backupoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupOperationResultsGetSample.ts
[backupoperationstatusesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupOperationStatusesGetSample.ts
[backuppolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupPoliciesListSample.ts
[backupprotectableitemslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupProtectableItemsListSample.ts
[backupprotecteditemslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupProtectedItemsListSample.ts
[backupprotectioncontainerslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupProtectionContainersListSample.ts
[backupprotectionintentlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupProtectionIntentListSample.ts
[backupresourceencryptionconfigsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupResourceEncryptionConfigsGetSample.ts
[backupresourceencryptionconfigsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupResourceEncryptionConfigsUpdateSample.ts
[backupresourcestorageconfigsnoncrrgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupResourceStorageConfigsNonCrrGetSample.ts
[backupresourcestorageconfigsnoncrrpatchsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupResourceStorageConfigsNonCrrPatchSample.ts
[backupresourcestorageconfigsnoncrrupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupResourceStorageConfigsNonCrrUpdateSample.ts
[backupresourcevaultconfigsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupResourceVaultConfigsGetSample.ts
[backupresourcevaultconfigsputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupResourceVaultConfigsPutSample.ts
[backupresourcevaultconfigsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupResourceVaultConfigsUpdateSample.ts
[backupstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupStatusGetSample.ts
[backupusagesummarieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupUsageSummariesListSample.ts
[backupworkloaditemslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupWorkloadItemsListSample.ts
[backupstriggersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/backupsTriggerSample.ts
[bmspreparedatamoveoperationresultgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/bmsPrepareDataMoveOperationResultGetSample.ts
[bmspreparedatamovesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/bmsPrepareDataMoveSample.ts
[bmstriggerdatamovesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/bmsTriggerDataMoveSample.ts
[deletedprotectioncontainerslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/deletedProtectionContainersListSample.ts
[exportjobsoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/exportJobsOperationResultsGetSample.ts
[featuresupportvalidatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/featureSupportValidateSample.ts
[getoperationstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/getOperationStatusSample.ts
[itemlevelrecoveryconnectionsprovisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/itemLevelRecoveryConnectionsProvisionSample.ts
[itemlevelrecoveryconnectionsrevokesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/itemLevelRecoveryConnectionsRevokeSample.ts
[jobcancellationstriggersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/jobCancellationsTriggerSample.ts
[jobdetailsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/jobDetailsGetSample.ts
[joboperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/jobOperationResultsGetSample.ts
[jobsexportsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/jobsExportSample.ts
[moverecoverypointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/moveRecoveryPointSample.ts
[operationvalidatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/operationValidateSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/operationsListSample.ts
[privateendpointconnectiondeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/privateEndpointConnectionDeleteSample.ts
[privateendpointconnectiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/privateEndpointConnectionGetSample.ts
[privateendpointconnectionputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/privateEndpointConnectionPutSample.ts
[privateendpointgetoperationstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/privateEndpointGetOperationStatusSample.ts
[protectablecontainerslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectableContainersListSample.ts
[protecteditemoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectedItemOperationResultsGetSample.ts
[protecteditemoperationstatusesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectedItemOperationStatusesGetSample.ts
[protecteditemscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectedItemsCreateOrUpdateSample.ts
[protecteditemsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectedItemsDeleteSample.ts
[protecteditemsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectedItemsGetSample.ts
[protectioncontaineroperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectionContainerOperationResultsGetSample.ts
[protectioncontainerrefreshoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectionContainerRefreshOperationResultsGetSample.ts
[protectioncontainersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectionContainersGetSample.ts
[protectioncontainersinquiresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectionContainersInquireSample.ts
[protectioncontainersrefreshsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectionContainersRefreshSample.ts
[protectioncontainersregistersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectionContainersRegisterSample.ts
[protectioncontainersunregistersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectionContainersUnregisterSample.ts
[protectionintentcreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectionIntentCreateOrUpdateSample.ts
[protectionintentdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectionIntentDeleteSample.ts
[protectionintentgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectionIntentGetSample.ts
[protectionintentvalidatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectionIntentValidateSample.ts
[protectionpoliciescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectionPoliciesCreateOrUpdateSample.ts
[protectionpoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectionPoliciesDeleteSample.ts
[protectionpoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectionPoliciesGetSample.ts
[protectionpolicyoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectionPolicyOperationResultsGetSample.ts
[protectionpolicyoperationstatusesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/protectionPolicyOperationStatusesGetSample.ts
[recoverypointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/recoveryPointsGetSample.ts
[recoverypointslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/recoveryPointsListSample.ts
[recoverypointsrecommendedformovelistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/recoveryPointsRecommendedForMoveListSample.ts
[resourceguardproxiesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/resourceGuardProxiesGetSample.ts
[resourceguardproxydeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/resourceGuardProxyDeleteSample.ts
[resourceguardproxygetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/resourceGuardProxyGetSample.ts
[resourceguardproxyputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/resourceGuardProxyPutSample.ts
[resourceguardproxyunlockdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/resourceGuardProxyUnlockDeleteSample.ts
[restorestriggersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/restoresTriggerSample.ts
[securitypinsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/securityPiNsGetSample.ts
[validateoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/validateOperationResultsGetSample.ts
[validateoperationstatusesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/validateOperationStatusesGetSample.ts
[validateoperationtriggersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v10/typescript/src/validateOperationTriggerSample.ts
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-recoveryservicesbackup?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
