sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/README.md
# @azure/arm-recoveryservicesbackup client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for @azure/arm-recoveryservicesbackup in some common scenarios.

| **File Name**                                                                                                                                           | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| ------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [bMSPrepareDataMoveOperationResultGetSample.ts][bmspreparedatamoveoperationresultgetsample]                                                             | fetches operation status for data move operation on vault x-ms-original-file: 2026-08-01/BackupDataMove/PrepareDataMoveOperationResult_Get.json                                                                                                                                                                                                                                                                                                                                               |
| [backupEnginesGetSample.ts][backupenginesgetsample]                                                                                                     | returns backup management server registered to Recovery Services Vault. x-ms-original-file: 2026-08-01/Dpm/BackupEngines_Get.json                                                                                                                                                                                                                                                                                                                                                             |
| [backupEnginesListSample.ts][backupengineslistsample]                                                                                                   | backup management servers registered to Recovery Services Vault. Returns a pageable list of servers. x-ms-original-file: 2026-08-01/Dpm/BackupEngines_List.json                                                                                                                                                                                                                                                                                                                               |
| [backupJobsListSample.ts][backupjobslistsample]                                                                                                         | provides a pageable list of jobs. x-ms-original-file: 2026-08-01/Common/ListJobs.json                                                                                                                                                                                                                                                                                                                                                                                                         |
| [backupOperationResultsGetSample.ts][backupoperationresultsgetsample]                                                                                   | provides the status of the delete operations such as deleting backed up item. Once the operation has started, the status code in the response would be Accepted. It will continue to be in this state till it reaches completion. On successful completion, the status code will be OK. This method expects OperationID as an argument. OperationID is part of the Location header of the operation response. x-ms-original-file: 2026-08-01/Common/ProtectedItem_Delete_OperationResult.json |
| [backupOperationStatusesGetSample.ts][backupoperationstatusesgetsample]                                                                                 | fetches the status of an operation such as triggering a backup, restore. The status can be in progress, completed or failed. You can refer to the OperationStatus enum for all the possible states of an operation. Some operations create jobs. This method returns the list of jobs when the operation is complete. x-ms-original-file: 2026-08-01/Common/ProtectedItem_Delete_OperationStatus.json                                                                                         |
| [backupPoliciesListSample.ts][backuppolicieslistsample]                                                                                                 | lists of backup policies associated with Recovery Services Vault. API provides pagination parameters to fetch scoped results. x-ms-original-file: 2026-08-01/AzureIaasVm/BackupPolicies_List.json                                                                                                                                                                                                                                                                                             |
| [backupProtectableItemsListSample.ts][backupprotectableitemslistsample]                                                                                 | provides a pageable list of protectable objects within your subscription according to the query filter and the pagination parameters. x-ms-original-file: 2026-08-01/AzureIaasVm/BackupProtectableItems_List.json                                                                                                                                                                                                                                                                             |
| [backupProtectedItemsListSample.ts][backupprotecteditemslistsample]                                                                                     | provides a pageable list of all items that are backed up within a vault. x-ms-original-file: 2026-08-01/AzureIaasVm/BackupProtectedItems_List.json                                                                                                                                                                                                                                                                                                                                            |
| [backupProtectionContainersListSample.ts][backupprotectioncontainerslistsample]                                                                         | lists the containers registered to Recovery Services Vault. x-ms-original-file: 2026-08-01/AzureStorage/ProtectionContainers_List.json                                                                                                                                                                                                                                                                                                                                                        |
| [backupProtectionIntentListSample.ts][backupprotectionintentlistsample]                                                                                 | provides a pageable list of all intents that are present within a vault. x-ms-original-file: 2026-08-01/AzureWorkload/BackupProtectionIntent_List.json                                                                                                                                                                                                                                                                                                                                        |
| [backupResourceEncryptionConfigsGetSample.ts][backupresourceencryptionconfigsgetsample]                                                                 | fetches Vault Encryption config. x-ms-original-file: 2026-08-01/BackupResourceEncryptionConfig_Get.json                                                                                                                                                                                                                                                                                                                                                                                       |
| [backupResourceEncryptionConfigsUpdateSample.ts][backupresourceencryptionconfigsupdatesample]                                                           | updates Vault encryption config. x-ms-original-file: 2026-08-01/BackupResourceEncryptionConfig_Put.json                                                                                                                                                                                                                                                                                                                                                                                       |
| [backupResourceStorageConfigsNonCRRGetSample.ts][backupresourcestorageconfigsnoncrrgetsample]                                                           | fetches resource storage config. x-ms-original-file: 2026-08-01/Common/BackupStorageConfig_Get.json                                                                                                                                                                                                                                                                                                                                                                                           |
| [backupResourceStorageConfigsNonCRRPatchSample.ts][backupresourcestorageconfigsnoncrrpatchsample]                                                       | updates vault storage model type. x-ms-original-file: 2026-08-01/Common/BackupStorageConfig_Patch.json                                                                                                                                                                                                                                                                                                                                                                                        |
| [backupResourceStorageConfigsNonCRRUpdateSample.ts][backupresourcestorageconfigsnoncrrupdatesample]                                                     | updates vault storage model type. x-ms-original-file: 2026-08-01/Common/BackupStorageConfig_Put.json                                                                                                                                                                                                                                                                                                                                                                                          |
| [backupResourceVaultConfigsGetSample.ts][backupresourcevaultconfigsgetsample]                                                                           | fetches resource vault config. x-ms-original-file: 2026-08-01/Common/BackupResourceVaultConfigs_Get.json                                                                                                                                                                                                                                                                                                                                                                                      |
| [backupResourceVaultConfigsPutSample.ts][backupresourcevaultconfigsputsample]                                                                           | updates vault security config. x-ms-original-file: 2026-08-01/Common/BackupResourceVaultConfigs_Put.json                                                                                                                                                                                                                                                                                                                                                                                      |
| [backupResourceVaultConfigsUpdateSample.ts][backupresourcevaultconfigsupdatesample]                                                                     | updates vault security config. x-ms-original-file: 2026-08-01/Common/BackupResourceVaultConfigs_Patch.json                                                                                                                                                                                                                                                                                                                                                                                    |
| [backupStatusGetSample.ts][backupstatusgetsample]                                                                                                       | get the container backup status x-ms-original-file: 2026-08-01/AzureIaasVm/GetBackupStatus.json                                                                                                                                                                                                                                                                                                                                                                                               |
| [backupUsageSummariesListSample.ts][backupusagesummarieslistsample]                                                                                     | fetches the backup management usage summaries of the vault. x-ms-original-file: 2026-08-01/Common/BackupProtectedItem_UsageSummary_Get.json                                                                                                                                                                                                                                                                                                                                                   |
| [backupWorkloadItemsListSample.ts][backupworkloaditemslistsample]                                                                                       | provides a pageable list of workload item of a specific container according to the query filter and the pagination parameters. x-ms-original-file: 2026-08-01/AzureWorkload/BackupWorkloadItems_List.json                                                                                                                                                                                                                                                                                     |
| [backupsTriggerSample.ts][backupstriggersample]                                                                                                         | triggers backup for specified backed up item. This is an asynchronous operation. To know the status of the operation, call GetProtectedItemOperationResult API. x-ms-original-file: 2026-08-01/Common/TriggerBackup_Post.json                                                                                                                                                                                                                                                                 |
| [bmsPrepareDataMoveSample.ts][bmspreparedatamovesample]                                                                                                 | prepares source vault for Data Move operation x-ms-original-file: 2026-08-01/BackupDataMove/PrepareDataMove_Post.json                                                                                                                                                                                                                                                                                                                                                                         |
| [bmsTriggerDataMoveSample.ts][bmstriggerdatamovesample]                                                                                                 | triggers Data Move Operation on target vault x-ms-original-file: 2026-08-01/BackupDataMove/TriggerDataMove_Post.json                                                                                                                                                                                                                                                                                                                                                                          |
| [configureSourceScanExecuteSample.ts][configuresourcescanexecutesample]                                                                                 | configures source scan for a protected item. This is an asynchronous operation. To know the status of the operation, call GetProtectedItemOperationResult API. x-ms-original-file: 2026-08-01/AzureIaasVm/ConfigureSourceScan.json                                                                                                                                                                                                                                                            |
| [deletedProtectionContainersListSample.ts][deletedprotectioncontainerslistsample]                                                                       | lists the soft deleted containers registered to Recovery Services Vault. x-ms-original-file: 2026-08-01/AzureStorage/SoftDeletedContainers_List.json                                                                                                                                                                                                                                                                                                                                          |
| [exportJobsOperationResultsGetSample.ts][exportjobsoperationresultsgetsample]                                                                           | gets the operation result of operation triggered by Export Jobs API. If the operation is successful, then it also contains URL of a Blob and a SAS key to access the same. The blob contains exported jobs in JSON serialized format. x-ms-original-file: 2026-08-01/Common/ExportJobsOperationResult.json                                                                                                                                                                                    |
| [featureSupportValidateSample.ts][featuresupportvalidatesample]                                                                                         | it will validate if given feature with resource properties is supported in service x-ms-original-file: 2026-08-01/AzureIaasVm/BackupFeature_Validate.json                                                                                                                                                                                                                                                                                                                                     |
| [fetchTieringCostPostSample.ts][fetchtieringcostpostsample]                                                                                             | provides the details of the tiering related sizes and cost. Status of the operation can be fetched using GetTieringCostOperationStatus API and result using GetTieringCostOperationResult API. x-ms-original-file: 2026-08-01/TieringCost/FetchTieringCostForPolicy.json                                                                                                                                                                                                                      |
| [getOperationStatusSample.ts][getoperationstatussample]                                                                                                 | fetches Operation Result for Prepare Data Move x-ms-original-file: 2026-08-01/BackupDataMove/BackupDataMoveOperationStatus_Get.json                                                                                                                                                                                                                                                                                                                                                           |
| [getTieringCostOperationResultGetSample.ts][gettieringcostoperationresultgetsample]                                                                     | gets the result of async operation for tiering cost x-ms-original-file: 2026-08-01/TieringCost/GetTieringCostOperationResult.json                                                                                                                                                                                                                                                                                                                                                             |
| [itemLevelRecoveryConnectionsListInstantItemRecoveryOperationResultSample.ts][itemlevelrecoveryconnectionslistinstantitemrecoveryoperationresultsample] | fetches the mount scripts (iSCSI connection details) for an active Instant Item Recovery (ILR) session on the recovery point. Required from API version 2026-08-01 onwards; replaces the scripts previously returned inline in the operationsStatus (ILR provision) response. x-ms-original-file: 2026-08-01/AzureIaasVm/ListInstantItemRecoveryOperationResult.json                                                                                                                          |
| [itemLevelRecoveryConnectionsProvisionSample.ts][itemlevelrecoveryconnectionsprovisionsample]                                                           | provisions a script which invokes an iSCSI connection to the backup data. Executing this script opens a file explorer displaying all the recoverable files and folders. This is an asynchronous operation. To know the status of provisioning, call GetProtectedItemOperationResult API. x-ms-original-file: 2026-08-01/AzureIaasVm/Provision_Ilr.json                                                                                                                                        |
| [itemLevelRecoveryConnectionsRevokeSample.ts][itemlevelrecoveryconnectionsrevokesample]                                                                 | revokes an iSCSI connection which can be used to download a script. Executing this script opens a file explorer displaying all recoverable files and folders. This is an asynchronous operation. x-ms-original-file: 2026-08-01/AzureIaasVm/Revoke_Ilr.json                                                                                                                                                                                                                                   |
| [jobCancellationsTriggerSample.ts][jobcancellationstriggersample]                                                                                       | cancels a job. This is an asynchronous operation. To know the status of the cancellation, call GetCancelOperationResult API. x-ms-original-file: 2026-08-01/Common/TriggerCancelJob.json                                                                                                                                                                                                                                                                                                      |
| [jobDetailsGetSample.ts][jobdetailsgetsample]                                                                                                           | gets extended information associated with the job. x-ms-original-file: 2026-08-01/Common/GetJobDetails.json                                                                                                                                                                                                                                                                                                                                                                                   |
| [jobOperationResultsGetSample.ts][joboperationresultsgetsample]                                                                                         | fetches the result of any operation. x-ms-original-file: 2026-08-01/Common/CancelJobOperationResult.json                                                                                                                                                                                                                                                                                                                                                                                      |
| [jobsExportSample.ts][jobsexportsample]                                                                                                                 | triggers export of jobs specified by filters and returns an OperationID to track. x-ms-original-file: 2026-08-01/Common/TriggerExportJobs.json                                                                                                                                                                                                                                                                                                                                                |
| [moveRecoveryPointSample.ts][moverecoverypointsample]                                                                                                   | move recovery point from one datastore to another store. x-ms-original-file: 2026-08-01/TriggerRecoveryPointMove_Post.json                                                                                                                                                                                                                                                                                                                                                                    |
| [operationValidateSample.ts][operationvalidatesample]                                                                                                   | validate operation for specified backed up item. This is a synchronous operation. x-ms-original-file: 2026-08-01/AzureIaasVm/ValidateOperation_RestoreDisk.json                                                                                                                                                                                                                                                                                                                               |
| [operationsListSample.ts][operationslistsample]                                                                                                         | list the operations for the provider x-ms-original-file: 2026-08-01/ListOperations.json                                                                                                                                                                                                                                                                                                                                                                                                       |
| [privateEndpointConnectionOperationsDeleteSample.ts][privateendpointconnectionoperationsdeletesample]                                                   | delete Private Endpoint requests. This call is made by Backup Admin. x-ms-original-file: 2026-08-01/PrivateEndpointConnection/DeletePrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                            |
| [privateEndpointConnectionOperationsGetSample.ts][privateendpointconnectionoperationsgetsample]                                                         | get Private Endpoint Connection. This call is made by Backup Admin. x-ms-original-file: 2026-08-01/PrivateEndpointConnection/GetPrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                                |
| [privateEndpointConnectionOperationsPutSample.ts][privateendpointconnectionoperationsputsample]                                                         | approve or Reject Private Endpoint requests. This call is made by Backup Admin. x-ms-original-file: 2026-08-01/PrivateEndpointConnection/PutPrivateEndpointConnection.json                                                                                                                                                                                                                                                                                                                    |
| [privateEndpointOperationsGetOperationStatusSample.ts][privateendpointoperationsgetoperationstatussample]                                               | gets the operation status for a private endpoint connection. x-ms-original-file: 2026-08-01/PrivateEndpointConnection/GetPrivateEndpointConnectionOperationStatus.json                                                                                                                                                                                                                                                                                                                        |
| [protectableContainersListSample.ts][protectablecontainerslistsample]                                                                                   | lists the containers that can be registered to Recovery Services Vault. x-ms-original-file: 2026-08-01/AzureStorage/ProtectableContainers_List.json                                                                                                                                                                                                                                                                                                                                           |
| [protectedItemOperationResultsGetSample.ts][protecteditemoperationresultsgetsample]                                                                     | fetches the result of any operation on the backup item. x-ms-original-file: 2026-08-01/AzureIaasVm/ProtectedItemOperationResults.json                                                                                                                                                                                                                                                                                                                                                         |
| [protectedItemOperationStatusesGetSample.ts][protecteditemoperationstatusesgetsample]                                                                   | fetches the status of an operation such as triggering a backup, restore. The status can be in progress, completed or failed. You can refer to the OperationStatus enum for all the possible states of the operation. Some operations create jobs. This method returns the list of jobs associated with the operation. x-ms-original-file: 2026-08-01/AzureIaasVm/ProtectedItemOperationStatus.json                                                                                            |
| [protectedItemsCreateOrUpdateSample.ts][protecteditemscreateorupdatesample]                                                                             | enables backup of an item or to modifies the backup policy information of an already backed up item. This is an asynchronous operation. To know the status of the operation, call the GetItemOperationResult API. x-ms-original-file: 2026-08-01/AzureIaasVm/ConfigureProtection.json                                                                                                                                                                                                         |
| [protectedItemsDeleteSample.ts][protecteditemsdeletesample]                                                                                             | used to disable backup of an item within a container. This is an asynchronous operation. To know the status of the request, call the GetItemOperationResult API. x-ms-original-file: 2026-08-01/Common/ProtectedItem_Delete.json                                                                                                                                                                                                                                                              |
| [protectedItemsGetSample.ts][protecteditemsgetsample]                                                                                                   | provides the details of the backed up item. This is an asynchronous operation. To know the status of the operation, call the GetItemOperationResult API. x-ms-original-file: 2026-08-01/AzureIaasVm/ClassicCompute_ProtectedItem_Get.json                                                                                                                                                                                                                                                     |
| [protectionContainerOperationResultsGetSample.ts][protectioncontaineroperationresultsgetsample]                                                         | fetches the result of any operation on the container. x-ms-original-file: 2026-08-01/AzureStorage/ProtectionContainers_Inquire_Result.json                                                                                                                                                                                                                                                                                                                                                    |
| [protectionContainerRefreshOperationResultsGetSample.ts][protectioncontainerrefreshoperationresultsgetsample]                                           | provides the result of the refresh operation triggered by the BeginRefresh operation. x-ms-original-file: 2026-08-01/Common/RefreshContainers_OperationResults.json                                                                                                                                                                                                                                                                                                                           |
| [protectionContainersGetSample.ts][protectioncontainersgetsample]                                                                                       | gets details of the specific container registered to your Recovery Services Vault. x-ms-original-file: 2026-08-01/AzureWorkload/ProtectionContainers_Get.json                                                                                                                                                                                                                                                                                                                                 |
| [protectionContainersInquireSample.ts][protectioncontainersinquiresample]                                                                               | this is an async operation and the results should be tracked using location header or Azure-async-url. x-ms-original-file: 2026-08-01/AzureStorage/ProtectionContainers_Inquire.json                                                                                                                                                                                                                                                                                                          |
| [protectionContainersRefreshSample.ts][protectioncontainersrefreshsample]                                                                               | discovers all the containers in the subscription that can be backed up to Recovery Services Vault. This is an asynchronous operation. To know the status of the operation, call GetRefreshOperationResult API. x-ms-original-file: 2026-08-01/Common/RefreshContainers.json                                                                                                                                                                                                                   |
| [protectionContainersRegisterSample.ts][protectioncontainersregistersample]                                                                             | registers the container with Recovery Services vault. This is an asynchronous operation. To track the operation status, use location header to call get latest status of the operation. x-ms-original-file: 2026-08-01/AzureStorage/ProtectionContainers_ReRegister_SwitchToSAMI.json                                                                                                                                                                                                         |
| [protectionContainersUnregisterSample.ts][protectioncontainersunregistersample]                                                                         | unregisters the given container from your Recovery Services Vault. This is an asynchronous operation. To determine whether the backend service has finished processing the request, call Get Container Operation Result API. x-ms-original-file: 2026-08-01/AzureWorkload/ProtectionContainers_Unregister.json                                                                                                                                                                                |
| [protectionIntentOperationsCreateOrUpdateSample.ts][protectionintentoperationscreateorupdatesample]                                                     | create Intent for Enabling backup of an item. This is a synchronous operation. x-ms-original-file: 2026-08-01/AzureIaasVm/ProtectionIntent_CreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                |
| [protectionIntentOperationsDeleteSample.ts][protectionintentoperationsdeletesample]                                                                     | used to remove intent from an item x-ms-original-file: 2026-08-01/AzureWorkload/BackupProtectionIntent_Delete.json                                                                                                                                                                                                                                                                                                                                                                            |
| [protectionIntentOperationsGetSample.ts][protectionintentoperationsgetsample]                                                                           | provides the details of the protection intent up item. This is an asynchronous operation. To know the status of the operation, call the GetItemOperationResult API. x-ms-original-file: 2026-08-01/AzureWorkload/BackupProtectionIntent_Get.json                                                                                                                                                                                                                                              |
| [protectionIntentOperationsValidateSample.ts][protectionintentoperationsvalidatesample]                                                                 | it will validate followings 1. Vault capacity 2. VM is already protected 3. Any VM related configuration passed in properties. x-ms-original-file: 2026-08-01/AzureIaasVm/ProtectionIntent_Validate.json                                                                                                                                                                                                                                                                                      |
| [protectionPoliciesCreateOrUpdateSample.ts][protectionpoliciescreateorupdatesample]                                                                     | creates or modifies a backup policy. This is an asynchronous operation. Status of the operation can be fetched using GetPolicyOperationResult API. x-ms-original-file: 2026-08-01/AzureIaasVm/ProtectionPolicies_CreateOrUpdate_Complex.json                                                                                                                                                                                                                                                  |
| [protectionPoliciesDeleteSample.ts][protectionpoliciesdeletesample]                                                                                     | deletes specified backup policy from your Recovery Services Vault. This is an asynchronous operation. Status of the operation can be fetched using GetProtectionPolicyOperationResult API. x-ms-original-file: 2026-08-01/AzureIaasVm/ProtectionPolicies_Delete.json                                                                                                                                                                                                                          |
| [protectionPoliciesGetSample.ts][protectionpoliciesgetsample]                                                                                           | provides the details of the backup policies associated to Recovery Services Vault. This is an asynchronous operation. Status of the operation can be fetched using GetPolicyOperationResult API. x-ms-original-file: 2026-08-01/AzureIaasVm/ProtectionPolicies_Get.json                                                                                                                                                                                                                       |
| [protectionPolicyOperationResultsGetSample.ts][protectionpolicyoperationresultsgetsample]                                                               | provides the result of an operation. x-ms-original-file: 2026-08-01/AzureIaasVm/ProtectionPolicyOperationResults_Get.json                                                                                                                                                                                                                                                                                                                                                                     |
| [protectionPolicyOperationStatusesGetSample.ts][protectionpolicyoperationstatusesgetsample]                                                             | provides the status of the asynchronous operations like backup, restore. The status can be in progress, completed or failed. You can refer to the Operation Status enum for all the possible states of an operation. Some operations create jobs. This method returns the list of jobs associated with operation. x-ms-original-file: 2026-08-01/AzureIaasVm/ProtectionPolicyOperationStatuses_Get.json                                                                                       |
| [recoveryPointsGetSample.ts][recoverypointsgetsample]                                                                                                   | provides the information of the backed up data identified using RecoveryPointID. This is an asynchronous operation. To know the status of the operation, call the GetProtectedItemOperationResult API. x-ms-original-file: 2026-08-01/AzureIaasVm/RecoveryPoints_Get.json                                                                                                                                                                                                                     |
| [recoveryPointsListSample.ts][recoverypointslistsample]                                                                                                 | lists the backup copies for the backed up item. x-ms-original-file: 2026-08-01/AzureIaasVm/RecoveryPoints_List.json                                                                                                                                                                                                                                                                                                                                                                           |
| [recoveryPointsRecommendedForMoveListSample.ts][recoverypointsrecommendedformovelistsample]                                                             | lists the recovery points recommended for move to another tier x-ms-original-file: 2026-08-01/AzureIaasVm/RecoveryPointsRecommendedForMove_List.json                                                                                                                                                                                                                                                                                                                                          |
| [resourceGuardProxiesListSample.ts][resourceguardproxieslistsample]                                                                                     | list the ResourceGuardProxies under vault x-ms-original-file: 2026-08-01/ResourceGuardProxyCRUD/ListResourceGuardProxy.json                                                                                                                                                                                                                                                                                                                                                                   |
| [resourceGuardProxyDeleteSample.ts][resourceguardproxydeletesample]                                                                                     | delete ResourceGuardProxy under vault x-ms-original-file: 2026-08-01/ResourceGuardProxyCRUD/DeleteResourceGuardProxy.json                                                                                                                                                                                                                                                                                                                                                                     |
| [resourceGuardProxyGetSample.ts][resourceguardproxygetsample]                                                                                           | returns ResourceGuardProxy under vault and with the name referenced in request x-ms-original-file: 2026-08-01/ResourceGuardProxyCRUD/GetResourceGuardProxy.json                                                                                                                                                                                                                                                                                                                               |
| [resourceGuardProxyPutSample.ts][resourceguardproxyputsample]                                                                                           | add or Update ResourceGuardProxy under vault Secures vault critical operations x-ms-original-file: 2026-08-01/ResourceGuardProxyCRUD/PutResourceGuardProxy.json                                                                                                                                                                                                                                                                                                                               |
| [resourceGuardProxyUnlockDeleteSample.ts][resourceguardproxyunlockdeletesample]                                                                         | secures delete ResourceGuardProxy operations. x-ms-original-file: 2026-08-01/ResourceGuardProxyCRUD/UnlockDeleteResourceGuardProxy.json                                                                                                                                                                                                                                                                                                                                                       |
| [restoresTriggerSample.ts][restorestriggersample]                                                                                                       | restores the specified backed up data. This is an asynchronous operation. To know the status of this API call, use GetProtectedItemOperationResult API. x-ms-original-file: 2026-08-01/AzureIaasVm/TriggerRestore_ALR_IaasVMRestoreRequest.json                                                                                                                                                                                                                                               |
| [securityPINsGetSample.ts][securitypinsgetsample]                                                                                                       | get the security PIN. x-ms-original-file: 2026-08-01/Common/BackupSecurityPin_Get.json                                                                                                                                                                                                                                                                                                                                                                                                        |
| [tieringCostOperationStatusGetSample.ts][tieringcostoperationstatusgetsample]                                                                           | gets the status of async operations of tiering cost x-ms-original-file: 2026-08-01/TieringCost/GetTieringCostOperationStatus.json                                                                                                                                                                                                                                                                                                                                                             |
| [validateOperationResultsGetSample.ts][validateoperationresultsgetsample]                                                                               | fetches the result of a triggered validate operation. x-ms-original-file: 2026-08-01/AzureIaasVm/ValidateOperationResults.json                                                                                                                                                                                                                                                                                                                                                                |
| [validateOperationStatusesGetSample.ts][validateoperationstatusesgetsample]                                                                             | fetches the status of a triggered validate operation. The status can be in progress, completed or failed. You can refer to the OperationStatus enum for all the possible states of the operation. If operation has completed, this method returns the list of errors obtained while validating the operation. x-ms-original-file: 2026-08-01/AzureIaasVm/ValidateOperationStatus.json                                                                                                         |
| [validateOperationTriggerSample.ts][validateoperationtriggersample]                                                                                     | validate operation for specified backed up item in the form of an asynchronous operation. Returns tracking headers which can be tracked using GetValidateOperationResult API. x-ms-original-file: 2026-08-01/AzureIaasVm/TriggerValidateOperation_RestoreDisk.json                                                                                                                                                                                                                            |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/bMSPrepareDataMoveOperationResultGetSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node dist/bMSPrepareDataMoveOperationResultGetSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[bmspreparedatamoveoperationresultgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/bMSPrepareDataMoveOperationResultGetSample.ts
[backupenginesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupEnginesGetSample.ts
[backupengineslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupEnginesListSample.ts
[backupjobslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupJobsListSample.ts
[backupoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupOperationResultsGetSample.ts
[backupoperationstatusesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupOperationStatusesGetSample.ts
[backuppolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupPoliciesListSample.ts
[backupprotectableitemslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupProtectableItemsListSample.ts
[backupprotecteditemslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupProtectedItemsListSample.ts
[backupprotectioncontainerslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupProtectionContainersListSample.ts
[backupprotectionintentlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupProtectionIntentListSample.ts
[backupresourceencryptionconfigsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupResourceEncryptionConfigsGetSample.ts
[backupresourceencryptionconfigsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupResourceEncryptionConfigsUpdateSample.ts
[backupresourcestorageconfigsnoncrrgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupResourceStorageConfigsNonCRRGetSample.ts
[backupresourcestorageconfigsnoncrrpatchsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupResourceStorageConfigsNonCRRPatchSample.ts
[backupresourcestorageconfigsnoncrrupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupResourceStorageConfigsNonCRRUpdateSample.ts
[backupresourcevaultconfigsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupResourceVaultConfigsGetSample.ts
[backupresourcevaultconfigsputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupResourceVaultConfigsPutSample.ts
[backupresourcevaultconfigsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupResourceVaultConfigsUpdateSample.ts
[backupstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupStatusGetSample.ts
[backupusagesummarieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupUsageSummariesListSample.ts
[backupworkloaditemslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupWorkloadItemsListSample.ts
[backupstriggersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/backupsTriggerSample.ts
[bmspreparedatamovesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/bmsPrepareDataMoveSample.ts
[bmstriggerdatamovesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/bmsTriggerDataMoveSample.ts
[configuresourcescanexecutesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/configureSourceScanExecuteSample.ts
[deletedprotectioncontainerslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/deletedProtectionContainersListSample.ts
[exportjobsoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/exportJobsOperationResultsGetSample.ts
[featuresupportvalidatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/featureSupportValidateSample.ts
[fetchtieringcostpostsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/fetchTieringCostPostSample.ts
[getoperationstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/getOperationStatusSample.ts
[gettieringcostoperationresultgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/getTieringCostOperationResultGetSample.ts
[itemlevelrecoveryconnectionslistinstantitemrecoveryoperationresultsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/itemLevelRecoveryConnectionsListInstantItemRecoveryOperationResultSample.ts
[itemlevelrecoveryconnectionsprovisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/itemLevelRecoveryConnectionsProvisionSample.ts
[itemlevelrecoveryconnectionsrevokesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/itemLevelRecoveryConnectionsRevokeSample.ts
[jobcancellationstriggersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/jobCancellationsTriggerSample.ts
[jobdetailsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/jobDetailsGetSample.ts
[joboperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/jobOperationResultsGetSample.ts
[jobsexportsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/jobsExportSample.ts
[moverecoverypointsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/moveRecoveryPointSample.ts
[operationvalidatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/operationValidateSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/operationsListSample.ts
[privateendpointconnectionoperationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/privateEndpointConnectionOperationsDeleteSample.ts
[privateendpointconnectionoperationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/privateEndpointConnectionOperationsGetSample.ts
[privateendpointconnectionoperationsputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/privateEndpointConnectionOperationsPutSample.ts
[privateendpointoperationsgetoperationstatussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/privateEndpointOperationsGetOperationStatusSample.ts
[protectablecontainerslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectableContainersListSample.ts
[protecteditemoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectedItemOperationResultsGetSample.ts
[protecteditemoperationstatusesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectedItemOperationStatusesGetSample.ts
[protecteditemscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectedItemsCreateOrUpdateSample.ts
[protecteditemsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectedItemsDeleteSample.ts
[protecteditemsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectedItemsGetSample.ts
[protectioncontaineroperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectionContainerOperationResultsGetSample.ts
[protectioncontainerrefreshoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectionContainerRefreshOperationResultsGetSample.ts
[protectioncontainersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectionContainersGetSample.ts
[protectioncontainersinquiresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectionContainersInquireSample.ts
[protectioncontainersrefreshsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectionContainersRefreshSample.ts
[protectioncontainersregistersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectionContainersRegisterSample.ts
[protectioncontainersunregistersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectionContainersUnregisterSample.ts
[protectionintentoperationscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectionIntentOperationsCreateOrUpdateSample.ts
[protectionintentoperationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectionIntentOperationsDeleteSample.ts
[protectionintentoperationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectionIntentOperationsGetSample.ts
[protectionintentoperationsvalidatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectionIntentOperationsValidateSample.ts
[protectionpoliciescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectionPoliciesCreateOrUpdateSample.ts
[protectionpoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectionPoliciesDeleteSample.ts
[protectionpoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectionPoliciesGetSample.ts
[protectionpolicyoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectionPolicyOperationResultsGetSample.ts
[protectionpolicyoperationstatusesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/protectionPolicyOperationStatusesGetSample.ts
[recoverypointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/recoveryPointsGetSample.ts
[recoverypointslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/recoveryPointsListSample.ts
[recoverypointsrecommendedformovelistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/recoveryPointsRecommendedForMoveListSample.ts
[resourceguardproxieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/resourceGuardProxiesListSample.ts
[resourceguardproxydeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/resourceGuardProxyDeleteSample.ts
[resourceguardproxygetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/resourceGuardProxyGetSample.ts
[resourceguardproxyputsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/resourceGuardProxyPutSample.ts
[resourceguardproxyunlockdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/resourceGuardProxyUnlockDeleteSample.ts
[restorestriggersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/restoresTriggerSample.ts
[securitypinsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/securityPINsGetSample.ts
[tieringcostoperationstatusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/tieringCostOperationStatusGetSample.ts
[validateoperationresultsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/validateOperationResultsGetSample.ts
[validateoperationstatusesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/validateOperationStatusesGetSample.ts
[validateoperationtriggersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/samples/v14/typescript/src/validateOperationTriggerSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-recoveryservicesbackup
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/recoveryservicesbackup/arm-recoveryservicesbackup/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
